# instarec

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
instarec/: analyze.py  download.py  frames.py
scripts/: extract_card.py  extract_card_vlm.py  extract_frames.py
skills/instarec/: SKILL.md
